--- a/arch/arm64/configs/oneplus3_defconfig
+++ b/arch/arm64/configs/oneplus3_defconfig
@@ -44,9 +44,9 @@ CONFIG_ZEN_INTERACTIVE=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
 # CONFIG_COMPILE_TEST is not set
-CONFIG_LOCALVERSION="MadysXtended"
+CONFIG_LOCALVERSION="mcdachpappe"
 CONFIG_LOCALVERSION_AUTO=y
-CONFIG_DEFAULT_HOSTNAME="mady"
+CONFIG_DEFAULT_HOSTNAME="mcdachpappe"
 CONFIG_SWAP=y
 # CONFIG_SYSVIPC is not set
 # CONFIG_POSIX_MQUEUE is not set
@@ -291,18 +291,16 @@ CONFIG_BLOCK_COMPAT=y
 CONFIG_IOSCHED_NOOP=y
 # CONFIG_IOSCHED_TEST is not set
 CONFIG_IOSCHED_DEADLINE=y
-CONFIG_IOSCHED_MAPLE=y
 CONFIG_IOSCHED_CFQ=y
 CONFIG_IOSCHED_BFQ=y
 CONFIG_IOSCHED_MAPLE=y
-# CONFIG_DEFAULT_MAPLE is not set
 CONFIG_CGROUP_BFQIO=y
 # CONFIG_DEFAULT_DEADLINE is not set
 # CONFIG_DEFAULT_CFQ is not set
 CONFIG_DEFAULT_MAPLE=y
 # CONFIG_DEFAULT_BFQ is not set
 # CONFIG_DEFAULT_NOOP is not set
-#CONFIG_IOSCHED_MAPLE="maple"
+# CONFIG_IOSCHED_MAPLE="maple"
 CONFIG_UNINLINE_SPIN_UNLOCK=y
 CONFIG_ARCH_SUPPORTS_ATOMIC_RMW=y
 CONFIG_MUTEX_SPIN_ON_OWNER=y
@@ -3012,7 +3010,6 @@ CONFIG_SND_SOC_WCD_MBHC=y
 CONFIG_SND_SOC_TFA9890=y
 CONFIG_SND_SOC_MSM_STUB=y
 # CONFIG_SND_SOC_MSM_HDMI_CODEC_RX is not set
-CONFIG_SOUND_CONTROL=y
 # CONFIG_SND_SIMPLE_CARD is not set
 # CONFIG_SOUND_PRIME is not set
 
